k8s/base/lingocast/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lingocast
  labels:
    app.kubernetes.io/name: lingocast
