k8s/base/lingocast/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lingocast-ingress
  namespace: lingocast
  annotations:
    konghq.com/strip-path: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    konghq.com/plugins: lingocast-rate-limiting
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - lingocast-api.modami.cloud
      secretName: lingocast-tls
  rules:
    - host: lingocast-api.modami.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-lingocast-core-service
                port:
                  number: 8088
